@@ -47,6 +47,8 @@
   exist.
 - Bugfix: timer::moment() now disrespects the ajax or shell
   detection, and works better with the forced logging.
+- Bugfix: Prevent other js libraries from messing with the search
+  form.
 
 2.4.0
 - Added the method analysis to the recursion detection, to prevent
